# pypyx

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: python-package.yml  python-publish-test.yml  python-publish.yml  upload-test.yml  upload.yml
pypyx/: __init__.py
pypyx/core/: __init__.py
pypyx/core/config/: __init__.py  pypyx.ini
pypyx/utils/: __init__.py  window.py
requirements/: dev.txt
src/pypyx/: __init__.py
src/pypyx/core/: __init__.py
src/pypyx/entity/: __init__.py  ellipse.py  rect.py  sprite.py
src/pypyx/utils/: __init__.py  window.py
tests/: test_core.py  test_utils_window.py
