[metadata]
name = pypyx
version = 0.2.2
author = ZytroCode
license = MIT

description = A python library uses to make games with the help of pygame
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: MIT License
    Topic :: Games/Entertainment
    Topic :: Multimedia :: Graphics

[options]
zip_safe = no
include_package_data = True
python_requires = >=3.6
install_requires =
    pygame>=2.1.1

package_dir =
    =src
packages = find:

[options.packages.find]
where=src

[flake8]
ignore = F401, F403, F405, F841
max-line-length = 127
